Closed Bug 453312 Opened 17 years ago Closed 17 years ago

Building accessible without MOZ_XUL fails.

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(2 files)

Attached patch Build fixSplinter Review
No description provided.
Attachment #336490 - Flags: review?(surkov.alexander)
Attachment #336490 - Flags: review?(surkov.alexander) → review+
Comment on attachment 336490 [details] [diff] [review] Build fix >--- a/accessible/src/base/nsAccessibleEventData.cpp Mon Sep 01 19:51:35 2008 -0700 >+++ b/accessible/src/base/nsAccessibleEventData.cpp Tue Sep 02 18:01:36 2008 +0300 >@@ -49,6 +49,7 @@ > #include "nsIDOMXULMultSelectCntrlEl.h" > #include "nsXULTreeAccessible.h" > #endif >+#include "nsAccessibilityUtils.h" nit: please put it after nsAccessibilityAtoms.h to keep similar headers together.
Assignee: nobody → romaxa
.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: