Bug 453312 -  Building accessible without MOZ_XUL fails. r=surkov