accessible/src/base/nsRootAccessible.h
@@ -42,7 +42,9 @@
 #include "nsDocAccessibleWrap.h"
 
 #include "nsIAccessibleDocument.h"
+#ifdef MOZ_XUL
 #include "nsIAccessibleTreeCache.h"
+#endif
 
 #include "nsHashtable.h"
 #include "nsCaretAccessible.h"
@@ -131,6 +133,7 @@ class nsRootAccessible : public nsDocAccessibleWrap,
     /**
      * Handles 'TreeRowCountChanged' event. Used in HandleEventWithTarget().
      */
+#ifdef MOZ_XUL
     nsresult HandleTreeRowCountChangedEvent(nsIDOMEvent *aEvent,
                                             nsIAccessibleTreeCache *aAccessible);
 
@@ -140,7 +143,6 @@ class nsRootAccessible : public nsDocAccessibleWrap,
     nsresult HandleTreeInvalidatedEvent(nsIDOMEvent *aEvent,
                                         nsIAccessibleTreeCache *aAccessible);
 
-#ifdef MOZ_XUL
     PRUint32 GetChromeFlags();
 #endif
     already_AddRefed<nsIDocShellTreeItem>
